--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="page-calculator js-calculator">
     <ul class="page-groups" id="js-semesters"><li class="page-group js-semester">
   <div class="page-group__header">
-    <h3 class="page-group__title">Semester</h3>
+    <h3 class="page-group__title">Semester Ka Funda</h3>
     <div class="page-group__toggle">
       <span class="page-group__toggle-title">Weighted</span>
       <span class="page-group__toggle-button">
